--- a/demo/src/main/resources/static/formulario/formulario.css
+++ b/demo/src/main/resources/static/formulario/formulario.css
@@ -109,8 +109,10 @@ body {
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
     text-align: center;
-    width: 70%; /* Ancho del popup para pantallas grandes */
-    margin: auto; /* Centra horizontalmente */
+    width: 70%;
+    /* Ancho del popup para pantallas grandes */
+    margin: auto;
+    /* Centra horizontalmente */
 }
 
 .close-popup {
@@ -127,7 +129,6 @@ body {
     font-size: 20px;
     cursor: pointer;
     transition: 0.3s;
-    
 }
 
 .close-popup:hover {
@@ -362,7 +363,8 @@ body {
     }
 
     .popup-inner {
-        width: 100%; /* Ancho del popup para pantallas pequeñas */
+        width: 100%;
+        /* Ancho del popup para pantallas pequeñas */
     }
 }
 
@@ -384,5 +386,11 @@ body {
         width: 33%;
         float: left;
         /* Permite que los contenedores se alineen horizontalmente */
+    }
+
+    .error-message-text {
+        color: red;
+        font-size: 0.8rem;
+        display: none;
     }
 }
