--- a/demo/src/main/resources/static/formulario/formulario.css
+++ b/demo/src/main/resources/static/formulario/formulario.css
@@ -10,7 +10,9 @@ body {
 }
 
 .image-container {
-    width: 300px;
+    max-width: 100%;
+    /* para evitar que se desborde en pantallas pequeñas */
+    width: 100%;
     height: 225px;
     /* Altura del espacio de carga de imagen para mantener una relación de aspecto 4:3 */
     margin: 2rem auto;
@@ -142,18 +144,23 @@ body {
 }
 
 #justificacion-icon {
-    margin-right: 10px; /* Espacio entre el icono y el texto */
-    transition: transform 0.3s; /* Transición suave para el cambio del ícono */
+    margin-right: 10px;
+    /* Espacio entre el icono y el texto */
+    transition: transform 0.3s;
+    /* Transición suave para el cambio del ícono */
 }
 
 #justificacion-title.collapsed #justificacion-icon {
-    transform: rotate(-90deg); /* Girar el icono cuando la sección esté colapsada */
+    transform: rotate(-90deg);
+    /* Girar el icono cuando la sección esté colapsada */
 }
 
 #justificacion {
-    border: 1px solid #009587; /* Bordes en color azul */
+    border: 1px solid #009587;
+    /* Bordes en color azul */
     padding: 10px;
-    border-radius: 5px; /* Bordes redondeados */
+    border-radius: 5px;
+    /* Bordes redondeados */
 }
 
 .justificacion-text {
@@ -174,12 +181,15 @@ body {
 }
 
 #justificacion ul {
-    list-style-type: disc; /* Cambia a 'circle' o 'square' si prefieres otro tipo de viñeta */
-    padding-left: 20px; /* Ajusta el espacio según sea necesario */
+    list-style-type: disc;
+    /* Cambia a 'circle' o 'square' si prefieres otro tipo de viñeta */
+    padding-left: 20px;
+    /* Ajusta el espacio según sea necesario */
 }
 
 #justificacion li {
-    margin-bottom: 5px; /* Ajusta el espacio entre ítems de la lista */
+    margin-bottom: 5px;
+    /* Ajusta el espacio entre ítems de la lista */
 }
 
 #recomendacion-title {
@@ -188,18 +198,23 @@ body {
 }
 
 #recomendacion-icon {
-    margin-right: 10px; /* Espacio entre el icono y el texto */
-    transition: transform 0.3s; /* Transición suave para el cambio del ícono */
+    margin-right: 10px;
+    /* Espacio entre el icono y el texto */
+    transition: transform 0.3s;
+    /* Transición suave para el cambio del ícono */
 }
 
 #recomendacion-title.collapsed #recomendacion-icon {
-    transform: rotate(-90deg); /* Girar el icono cuando la sección esté colapsada */
+    transform: rotate(-90deg);
+    /* Girar el icono cuando la sección esté colapsada */
 }
 
 #recomendacion {
-    border: 1px solid #009587; /* Bordes en color azul */
+    border: 1px solid #009587;
+    /* Bordes en color azul */
     padding: 10px;
-    border-radius: 5px; /* Bordes redondeados */
+    border-radius: 5px;
+    /* Bordes redondeados */
 }
 
 .recomendacion-text {
@@ -225,11 +240,12 @@ body {
 
 #diagnostico-container {
     display: inline-block;
-    align-items: center; 
+    align-items: center;
 }
 
 .posibilidad-seccion {
-    display: none; /* Ocultar todas las secciones inicialmente */
+    display: none;
+    /* Ocultar todas las secciones inicialmente */
 }
 
 .close-popup {
