--- a/demo/src/main/resources/static/Login/login.css
+++ b/demo/src/main/resources/static/Login/login.css
@@ -46,24 +46,25 @@ body {
 }
 
 .color-box {
-
+    width: 60%;
     border: 2px solid #038073;
     /* Borde gris */
     border-radius: 8px;
     /* Bordes redondeados */
     padding: 60px;
-    padding-top: 3%;
+    padding-top: 10%;
     /* Espacio interno */
     background-color: #038073;
     /* Fondo ligeramente gris */
-    left: 50%; 
+    /*left: 50%; 
     /*position: fixed; /* or absolute */
+    color:#fff;
 
 }
 
 .gray-box {
 
-    
+    width: 60%;
     border: 2px solid #d3d3d3;
     /* Borde gris */
     border-radius: 8px;
@@ -80,26 +81,38 @@ body {
 }
 
 .box{
-    
-    width: 50%;
+
+    /*width: 50%;
     float: left;
     padding: 0px;
     left: 50%; /* centers #box in its containing element */
     margin-left: 0%;
     position: absolute;
-    top: 50%;
+    top: 40%;
     left: 50%;
     transform: translate(-50%, -50%);
+    display: flex;
+    width: 50%;
+    margin: auto;
 }
 
-label{
+.inicio{
     font-size: 20px;
     font-weight: bold;
     font-family: Arial, Helvetica, sans-serif;
 }
 
-placeholder{
+.placeholder{
     position: fixed;
     font-style: italic;
 }
 
+.sist{
+    color:#fff;
+}
+
+.error-message-text {
+    color: red;
+    font-size: 0.8rem;
+    display: none;
+}
