--- a/demo/src/main/resources/static/index.css
+++ b/demo/src/main/resources/static/index.css
@@ -1,5 +1,8 @@
 body {
     background-color: #f0f0f0;
+    margin: 0;
+    padding: 0;
+    font-family: Arial, sans-serif;
 }
 
 .page-title {
@@ -9,7 +12,7 @@ body {
     text-align: center;
 }
 
-.container {
+.container-page {
     display: flex;
     justify-content: center;
     gap: 2rem;
@@ -49,13 +52,47 @@ body {
 .button-icon {
     font-size: 3rem;
     color: #000000;
-    margin-bottom: 1rem; 
+    margin-bottom: 1rem;
 }
+
 .button-title {
-    color: #000000;  
+    color: #000000;
     margin-bottom: 0.5rem;
 }
 
 .button-description {
-    color: #000000; 
+    color: #000000;
+}
+
+
+.btn-volver-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 50px;
+}
+
+.btn-volver {
+    background-color: #009587;
+    color: white;
+    font-size: 18px;
+    font-weight: bold;
+    padding: 15px 40px;
+    border-radius: 8px;
+    border: none;
+    cursor: pointer;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    transition: all 0.3s ease;
+    letter-spacing: 1px;
+}
+
+.btn-volver:hover {
+    background-color: #038073;
+    transform: translateY(-2px);
+    box-shadow: 0 6px 8px rgba(0, 0, 0, 0.15);
+}
+
+.btn-volver:active {
+    transform: translateY(0);
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
