--- a/demo/src/main/resources/static/Login/login.css
+++ b/demo/src/main/resources/static/Login/login.css
@@ -13,7 +13,16 @@ body {
 
 
 
-
+/*
+.footer {
+    position: relative; 
+    width: 100%;
+    bottom: 0;
+    color: white;
+    background-color: #202020;
+    font-size: 12px; 
+    }
+*/
 
 .btn-iniciar {
     background-color: #009587;
