--- a/demo/src/main/resources/static/index.css
+++ b/demo/src/main/resources/static/index.css
@@ -118,3 +118,16 @@ body {
     transform: translateY(0);
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
+
+.footer {
+    position:fixed;
+    bottom:0;
+    width: 100%;
+    float:left;
+    font-size: 15px ;
+    font-family: verdana ;
+    height: 50px ;
+    background-color: #009587;
+    color: #fff;
+    text-align:center;
+}
