--- a/demo/src/main/resources/static/dataset/exportar.css
+++ b/demo/src/main/resources/static/dataset/exportar.css
@@ -11,6 +11,11 @@ p {
     font-size: 1.1rem;
 }
 
+.title {
+    color: #009587;
+    text-align: center;
+}
+
 .centered-text {
     max-width: 800px;
     margin: 3% auto;
