muevo Bajo funcionamiento a sintomas negativos

--- a/demo/src/main/resources/static/formulario/formulario.css
+++ b/demo/src/main/resources/static/formulario/formulario.css
@@ -2,8 +2,6 @@ body {
     background-color: #f0f0f0;
 }
 
-.container{ width: 90% !important; }
-
 .image-container {
     max-width: 100%;
     /* para evitar que se desborde en pantallas pequeñas */
@@ -395,6 +393,17 @@ body {
 
 /* Estilos para dispositivos móviles */
 @media (max-width: 768px) {
+    h2 {
+        font-size: 1.5rem;
+    }
+
+    h3 {
+        font-size: 1.3rem;
+    }
+
+    h6 {
+        font-size: 14px;
+    }
 
     .button-container .btn {
         width: 100%;
@@ -444,9 +453,6 @@ body {
 
 /* Estilos para dispositivos de escritorio */
 @media (min-width: 768px) {
-    .container{
-        max-width:  90%;
-    }
     .button-container {
         display: flex;
         justify-content: space-between;
