--- a/demo/src/main/resources/static/detalle/detalle.css
+++ b/demo/src/main/resources/static/detalle/detalle.css
@@ -39,6 +39,12 @@ h2 {
     box-sizing: border-box;
 }
 
+.form-group-detalle {
+    flex: 1 1 50%;
+    min-width: 250px;
+    box-sizing: border-box;
+}
+
 button,
 input {
     pointer-events: none;
@@ -201,8 +207,30 @@ input.form-control {
     border: 1px solid #ced4da;
 }
 
+/* Estilos para pantallas medianas (tablets) */
+@media (min-width: 768px) and (max-width: 1024px) {
+    .gray-box {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 10px;
+    }
+
+    .form-group-btn {
+        min-width: 25%;
+        box-sizing: border-box;
+    }
+
+    .btn-bool {
+        margin-bottom: 5px;
+    }
+}
+
 /* Estilos para dispositivos móviles */
 @media (max-width: 768px) {
+
+    h6 {
+        font-size: 0.9rem;
+    }
 
     #recomendacion-container,
     #justificacion-rechazo-container,
@@ -227,7 +255,6 @@ input.form-control {
         flex-direction: column;
         align-items: center;
         text-align: center;
-        margin-bottom: 20px;
     }
 
     .btn-bool .opciones {
@@ -249,7 +276,6 @@ input.form-control {
 
 /* Estilos para dispositivos de escritorio */
 @media (min-width: 768px) {
-
     .button-container {
         display: flex;
         justify-content: space-between;
